<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/settings_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@color/transparent"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/map_settings"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/settings_separator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_margin="@dimen/map_settings_item_separator"
                android:background="@color/colorLightBackgroundText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_text" />

            <TextView
                android:id="@+id/center_selector_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:padding="5dp"
                android:text="@string/center_map"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/map_center_selector"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/map_center_selector"
                app:layout_constraintTop_toTopOf="@+id/map_center_selector" />

            <RadioGroup
                android:id="@+id/map_center_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/map_settings_item_separator"
                android:background="@color/transparent"
                android:orientation="horizontal"
                app:layout_constraintLeft_toRightOf="@+id/center_selector_label"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_separator">

                <RadioButton
                    android:id="@+id/map_center_aircraft"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/selector_map_type_bg"
                    android:button="@null"
                    android:checked="true"
                    android:drawableStart="@drawable/uxsdk_ic_compass_aircraft"
                    android:drawableLeft="@drawable/uxsdk_ic_compass_aircraft"
                    android:padding="8dp"
                    android:textColor="@drawable/selector_map_type_text" />

                <RadioButton
                    android:id="@+id/map_center_home"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/selector_map_type_bg"
                    android:button="@null"
                    android:drawableStart="@drawable/uxsdk_ic_compass_home"
                    android:drawableLeft="@drawable/uxsdk_ic_compass_home"
                    android:padding="8dp"
                    android:textColor="@drawable/selector_map_type_text" />

                <RadioButton
                    android:id="@+id/map_center_none"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/selector_map_type_bg"
                    android:button="@null"
                    android:drawableStart="@android:drawable/ic_notification_clear_all"
                    android:drawableLeft="@android:drawable/ic_notification_clear_all"
                    android:padding="8dp"
                    android:textColor="@drawable/selector_map_type_text" />

            </RadioGroup>

            <CheckBox
                android:id="@+id/home_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/map_settings_item_separator"
                android:checked="true"
                android:text="@string/show_home_point"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/map_center_selector" />

            <CheckBox
                android:id="@+id/login_state_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/map_settings_item_separator"
                android:checked="true"
                android:text="@string/dji_account_indicator"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_point" />

            <Spinner
                android:id="@+id/map_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/map_settings_item_separator"
                android:background="@drawable/bg_spinner"
                android:entries="@array/mapTypeArray"
                android:paddingRight="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_state_indicator" />

            <Button
                android:id="@+id/btn_map_provider_test"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/map_settings_item_separator"
                android:background="@drawable/selector_map_type_bg"
                android:padding="10dp"
                android:text="@string/map_overlay"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/map_spinner" />

            <TextView
                android:id="@+id/fly_zone_settings_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/map_settings_separator"
                android:background="@color/transparent"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/fly_zone_settings"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_map_provider_test" />

            <View
                android:id="@+id/fly_zone_settings_separator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_margin="@dimen/map_settings_item_separator"
                android:background="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fly_zone_settings_text" />

            <CheckBox
                android:id="@+id/flyzone_legend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/map_settings_item_separator"
                android:text="@string/fly_zone_legend"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fly_zone_settings_separator" />

            <CheckBox
                android:id="@+id/flyzone_unlock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/map_settings_item_separator"
                android:checked="true"
                android:text="@string/unlock_flyzones"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flyzone_legend" />

            <Button
                android:id="@+id/btn_fly_zone"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/map_settings_item_separator"
                android:background="@drawable/selector_map_type_bg"
                android:padding="10dp"
                android:text="@string/fly_zone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flyzone_unlock" />

            <TextView
                android:id="@+id/flight_settings_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/map_settings_separator"
                android:background="@color/transparent"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/flight_settings"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_fly_zone" />

            <View
                android:id="@+id/flight_settings_separator"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_margin="@dimen/map_settings_item_separator"
                android:background="@color/colorAccent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flight_settings_text" />

            <CheckBox
                android:id="@+id/home_direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/map_settings_item_separator"
                android:checked="true"
                android:text="@string/home_direction"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flight_settings_separator" />

            <CheckBox
                android:id="@+id/lock_bounds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/map_settings_item_separator"
                android:checked="true"
                android:text="@string/auto_frame"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_direction" />

            <CheckBox
                android:id="@+id/flight_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/map_settings_item_separator"
                android:checked="true"
                android:text="@string/show_flight_path"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lock_bounds" />

            <CheckBox
                android:id="@+id/gimbal_yaw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/map_settings_item_separator"
                android:checked="true"
                android:text="@string/show_gimbal_yaw"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flight_path" />

            <TextView
                android:id="@+id/clear_flight_path"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/map_settings_item_separator"
                android:background="@drawable/selector_map_type_bg"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/clear_flight_path"
                android:textAllCaps="true"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gimbal_yaw" />

            <dji.ux.beta.hardwareaccessory.widget.rtk.RTKWidget
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clear_flight_path" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>